tests/fixtures/invalid/float_attribute.py
# Float does not support attribute access
x: float = 1.5
y: int = x.foo
